fix styling on small details and add share link

--- a/src/components/MovieCard/style.css
+++ b/src/components/MovieCard/style.css
@@ -5,11 +5,14 @@
   box-shadow: 0px 0px 0px rgba(63, 63, 68, 0.05),
     0px 1px 3px rgba(63, 63, 68, 0.15);
   border-radius: 28px;
+  position: relative;
 }
 
 .movie-card-image {
   border-top-left-radius: 28px;
   border-top-right-radius: 28px;
+  height: 425px;
+  width: 100%;
 }
 
 .movie-card-detail {
