--- a/src/components/NominationSection/style.css
+++ b/src/components/NominationSection/style.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   padding-top: 100px;
 }
 
